hopefully prevented horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ html {
   --fontFam: "josefin-sans", Times, sans;
   --navHeight: 60px;
 }
+.active {
+  background: #888888;
+}
+
 nav{
   position: fixed;
   top: 0;
@@ -119,7 +123,6 @@ embed{
 }
 
 h1{
-    padding-top: 60px;
     font-weight: bold;
     font-size: calc(30px + 1.5vw);
     color: black;
@@ -127,16 +130,17 @@ h1{
     font-weight: normal;
     float: right;
     width: 100%;
-    padding-right: 10%;
+    padding-right: 15px;
+    margin-top: 60px;
 }
 
 h2{
-  margin: 15px;
   font-weight: lighter;
   font-size: calc(20px + 1.5vw);
   color: black;
-  padding-top: 150px;
-  padding-right: 25px;
+  margin-bottom: 30px;
+  padding-right: 15px;
+  padding-left: 15px;
   width: 100%;
 }
 
